--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/MongoDB_Test.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=C:\\Users\\luigy\\OneDrive\\Documentos\\NetBeansProjects\\jcalendar-1.42\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\Mario\\Documents\\GitHub\\proyecto_tdb\\jcalendar-1.4.jar
 file.reference.mongo-java-driver-3.5.0.jar-1=mongo-java-driver-3.5.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mongo-java-driver-3.5.0.jar-1}
+    ${file.reference.mongo-java-driver-3.5.0.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
